# research_agent_lab

./: .gitignore  README.md  code_plan.md  pyproject.toml
agentlab_configs/: intent_led_virat_agentlab.yaml
agents/: __init__.py  auto_debugger.py  autonomous_experiment.py  branch_selection_agent.py  code_writer.py  codebase_analyzer.py  developer_agent.py  evidence_checker.py  experiment_decision.py  experiment_orchestrator.py  experiment_planner.py  literature_memory_agent.py  literature_searcher.py  local_paper_library.py  local_paper_parser.py  method_card_extractor.py  method_card_retriever.py  opportunity_agent.py  paper_reader.py  paper_selector.py  paper_triage.py  reference_extractor.py  research_manager.py  result_parser.py  retrieval_evaluator.py  reviewer_agent.py  run_evaluator.py  run_validation_agent.py  synthesis_agent.py  tree_pruner.py  tree_search_agent.py
app/: __init__.py  main.py
core/: __init__.py  agent_base.py  artifact_store.py  run_logger.py  state.py  tool_base.py  workflow.py
docs/: Q&A.md  model_and_literature_config.md  p17_dynamic_validation.md  project_handoff.md  project_safety.md  reference_network_retrieval.md  retrieval_evaluation.md  run_evaluation.md  runtime_environment.md
memory/: __init__.py  literature_memory.py  memory_policy.py  sqlite_memory.py
schemas/: __init__.py  auto_debug_record.py  base.py  code_patch.py  code_task.py  codebase_report.py  evidence.py  experiment_decision.py  experiment_plan.py  experiment_result.py  experiment_tree.py  method_card.py  opportunity.py  paper.py  parsed_paper.py  reference.py  (+5 more)
(+226 files in other folders)
